<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context="com.example.hila.myfirstapplication.controller.AddDriveActivity"
  >



    <!-- this activity get the data, check them and add drive -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="594dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        >




        <!-- tthe client name -->
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Name"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_action_name"
            />

        <!-- email of client -->
        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_action_mail"/>

        <!-- phone number of client -->
        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:maxLength="10"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_action_phone"
            />


        <!-- spiner to choose status -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/Statusofdrive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <!-- the start time of drive -->
        <TimePicker
            android:id="@+id/startTimePicker"
            android:layout_width="233dp"
            android:layout_height="109dp"
            android:timePickerMode="spinner"
           />


        <!-- start address -->
        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/Startaddress"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_action_location"/>

        <!-- end address -->
        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/Endaddress"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_action_location"
            />

        <!-- this button make the invite -->

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:onClick="inviteButtonClicked" />



    </LinearLayout>


</android.support.constraint.ConstraintLayout>
